# fastdata

./: .gitignore  README.md  example.py  pyproject.toml
Aletheia-ng_nigerian-pidgin-corpus-synth/: README.md
examples/: CRON_SETUP.md  pidgin_generator.py  pidgin_news.py  pidgin_simple.py  push_to_hf.py  run_pidgin_news.sh
fastdata/: core.py
